fixed jumpdown

--- a/style.css
+++ b/style.css
@@ -1,44 +1,63 @@
-body{
-    display: flex;
-    width: 100vw;
-    height: 100vh;
+body {
+    display: flex;    
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90vw;
+    height: 90vh;
 }
 
-.container{
+.container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows:1fr 1fr 109px 1fr;
-    width: auto;
-    height: auto;
+    grid-template-rows: 1fr 1fr 109px 1fr;
     margin: auto;
+    overflow: hidden;
+    
 }
 
-.element{
+#score {
+    position: relative;
+    top: 16%;
+    left: 27%;
+}
+
+#directive {
+    font-size: 25px;
+    margin-top: 40px;
+    margin-bottom: -40px;
+    height: 20px;
+    font-family: 'Pixelated', sans-serif;
+}
+
+.element {
     display: flex;
     align-items: end;
     width: 130px;
     height: 130px;
 }
 
-.sky{
+.sky {
     background-color: rgb(0, 128, 255);
 }
 
-.grass{
+.grass {
     background-color: rgb(0, 134, 31);
 }
 
-.Darkgrass{
+.Darkgrass {
     background-color: rgb(34, 131, 58);
 }
 
-.enemy{
+.enemy {
     margin: auto;
 }
 
-.GrassAligned{
+.GrassAligned {
     display: flex;
     flex-direction: column;
     justify-content: end;
     align-items: center;
 }
+
+
